{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 12,
  "lineage": "10c10082-c7a5-a6cc-6c49-35211bd6b42e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00b105a12aa2a60eb",
            "arn": "arn:aws:ec2:eu-central-1:419197236432:instance/i-07d1f1f849bd543ce",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d1f1f849bd543ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "frankfurt-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0ec3f8bc842d24976"
              }
            ],
            "primary_network_interface_id": "eni-0ec3f8bc842d24976",
            "private_dns": "ip-172-31-32-162.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.162",
            "public_dns": "ec2-3-75-177-193.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.75.177.193",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-022c439dc3a1607a3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "allow_web_SSH"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4f395f743052e6f",
            "tags": {
              "AppName": "Terraform Web Server_dev",
              "Environment": "dev",
              "ManageByTerraform": "true",
              "Name": "Terraform Web Server"
            },
            "tags_all": {
              "AppName": "Terraform Web Server_dev",
              "Environment": "dev",
              "ManageByTerraform": "true",
              "Name": "Terraform Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065f87c74f3e94d41"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "i-07d1f1f849bd543ce",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH",
            "data.aws_ami.aws_linux_2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web_SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group/sg-065f87c74f3e94d41",
            "description": "Allow SSH,HTTP, and HTTPS traffic to web servers",
            "egress": [],
            "id": "sg-065f87c74f3e94d41",
            "ingress": [],
            "name": "allow_web_SSH",
            "name_prefix": "",
            "owner_id": "419197236432",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web_SSH"
            },
            "tags_all": {
              "Name": "allow_web_SSH"
            },
            "timeouts": null,
            "vpc_id": "vpc-03857079d2a72a2db"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sg-065f87c74f3e94d41",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group-rule/sgr-080db6ddd76d0831f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 0,
            "id": "sgr-080db6ddd76d0831f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-065f87c74f3e94d41",
            "security_group_rule_id": "sgr-080db6ddd76d0831f",
            "tags": null,
            "tags_all": {},
            "to_port": 0
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sgr-080db6ddd76d0831f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group-rule/sgr-0d96b04fe0edda727",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d96b04fe0edda727",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-065f87c74f3e94d41",
            "security_group_rule_id": "sgr-0d96b04fe0edda727",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sgr-0d96b04fe0edda727",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group-rule/sgr-036229ec893a3aef8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-036229ec893a3aef8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-065f87c74f3e94d41",
            "security_group_rule_id": "sgr-036229ec893a3aef8",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sgr-036229ec893a3aef8",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:419197236432:security-group-rule/sgr-03fc2930da3ebefc1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03fc2930da3ebefc1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-065f87c74f3e94d41",
            "security_group_rule_id": "sgr-03fc2930da3ebefc1",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "419197236432",
            "id": "sgr-03fc2930da3ebefc1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.allow_web_SSH"
          ]
        }
      ]
    }
  ]
}